[package]
name = "video-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
hyper = "0.14"
tokio-util = { version = "0.6", features = ["io"] }


